--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
 noodles = { version = "0.77.0", features = ["gff"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
